tests/rosetta/out/Rust/a+b.error
rustc: exit status 1
error[E0425]: cannot find function `input` in this scope
 --> /tmp/a_b.rs:4:21
  |
4 |         let a = int(input());
  |                     ^^^^^ not found in this scope

error[E0425]: cannot find function `int` in this scope
 --> /tmp/a_b.rs:4:17
  |
4 |         let a = int(input());
  |                 ^^^ not found in this scope

error[E0425]: cannot find function `input` in this scope
 --> /tmp/a_b.rs:5:21
  |
5 |         let b = int(input());
  |                     ^^^^^ not found in this scope

error[E0425]: cannot find function `int` in this scope
 --> /tmp/a_b.rs:5:17
  |
5 |         let b = int(input());
  |                 ^^^ not found in this scope

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0425`.
