tests/rosetta/out/Rust/a+b.rs
// Generated by Mochi compiler v0.10.28 on 2006-01-02T15:04:05Z
fn main() {
    fn main() -> () {
        let a = int(input());
        let b = int(input());
        println!("{}", vec![format!("{}", a + b)].into_iter().filter(|s| !s.is_empty()).collect::<Vec<_>>().join(" ") );
    }
    main();
}
